Fix alignment line issues

--- a/css/drag-n-drop.css
+++ b/css/drag-n-drop.css
@@ -7,6 +7,7 @@
   width: 100%;
   height: 1px;
   margin: 0;
+  z-index: 1000;
 }
 
 .vertical-line {
@@ -18,6 +19,8 @@
   width: 1px;
   height: 100%;
   margin: 0;
+  top: 0;
+  z-index: 1000;
 }
 
 .dropzone {
